--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ header{
 .title__text{
     font-size: 26px;
     line-height: 40px;
-    padding-top: 15px;
+    padding-top: 45px;
+    margin-bottom: 45px;
 }
 
 .calc-block{
@@ -115,11 +116,11 @@ header{
 
 .application-text{
     color: #fff;
-    font-size: 14px;
+    font-size: 12px;
     border:1px solid #F1F3F6;
     padding: 15px 20px;
     border-radius: 8px;
-    margin: 10px 0;
+    margin-bottom: 32px;
 }
 
 .application-link{
@@ -130,10 +131,11 @@ header{
 
 .button-switch{
     display: flex;
+    margin-bottom: 39px;
 }
 
 .button-switch__text{
-    font-size: 15px;
+    font-size: 12px;
     display: flex;
     align-items: center;
 }
@@ -156,7 +158,7 @@ header{
     position: absolute;
     width: 21px;
     height: 21px;
-    background: #015aff;
+    background: #0F23E1;
     border-radius: 20px;
     top: 2px;
     left: 4px;
@@ -173,10 +175,11 @@ input:checked[class="button-switch__checkbox"]::before{
 .form-input{
     background-color: #fff;
     padding: 20px;
+    font-size: 20px;
     width: 100%;
     height: 55px;
     border-radius: 4px;
-    margin: 15px 0;
+    margin-bottom: 18px;
     box-shadow: 0px 15px 30px rgba(15, 35, 225, 0.4);
 }
 
@@ -187,20 +190,20 @@ input:checked[class="button-switch__checkbox"]::before{
 }
 
 .form-text{
-    padding-top: 5px;
     color: #fff;
     font-size: 12px;
+    margin-bottom: 20px;
 }
 
 .under-form-text{
     display: flex;
     justify-content: space-between;
-    padding: 10px 0;
+    padding: 18px 8px 0 8px;
+    margin-bottom: 21px;
 }
 
-
 .calc-block__content{
-    margin-bottom: 50px;
+    margin-bottom: 71px;
     width: 335px;
     height: 600px;
     border-radius: 12px;
@@ -213,10 +216,21 @@ input:checked[class="button-switch__checkbox"]::before{
 }
 
 .content-block{
-    margin: 60px 50px;
+    margin: 30px 25px;
+}
+
+.invoice-block{
+    border-bottom: 1px solid #F1F3F6;
+    margin-bottom: 25px;
+}
+.credit-program-block{
+    border-bottom: 1px solid #F1F3F6;
+    padding-bottom: 18px;
+    margin-bottom: 25px;
 }
 
 .content-text{
+    margin-bottom: 18px;
     font-size: 12px;
     line-height: 180%;
     text-transform: uppercase;
@@ -225,7 +239,6 @@ input:checked[class="button-switch__checkbox"]::before{
 }
 
 .content-title{
-    margin-top: 6px;
     margin-bottom: 30px;
     font-size: 31px;
     line-height: 27px;
@@ -236,7 +249,6 @@ input:checked[class="button-switch__checkbox"]::before{
 .content-subtitle{
     line-height: 27px;
     color: #26262C;
-    margin-top: 5px;
     margin-bottom: 15px;
     font-size: 18px;
     text-transform: uppercase;
@@ -244,6 +256,13 @@ input:checked[class="button-switch__checkbox"]::before{
 
 .checkbox-block{
     display: flex;
+    margin-bottom: 19px;
+}
+
+.checkbox-block_check{
+    accent-color: #0F23E1;
+    width: 16px;
+    height: 16px;
 }
 
 .checkbox-block__text{
@@ -261,37 +280,36 @@ input:checked[class="button-switch__checkbox"]::before{
 
 .copy-text{
     color: #71717A;
-    margin-top: 5px;
-    margin-bottom: 15px;
+    margin-bottom: 22px;
     font-size: 11px;
     line-height: 130%;
 }
 
 .button-to-send{
-    font-size: 12px;
+    font-size: 14px;
     line-height: 19px;
     text-align: center;
     color: #FFFFFF;
     background: #0F23E1;
     border-radius: 10px;
-    padding: 12px 64px;
+    padding: 22px 82px;
 }
 
 .pseudo-block{
-    margin: -68px auto;
+    margin: -60px auto;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 10px;
 }
 
 .pseudo-block_first{
     width: 320px;
-    height: 35px;
+    height: 75px;
     z-index: 2;
 }
 
 .pseudo-block_second{
     width: 300px;
-    height: 40px;
+    height: 35px;
     margin-top: 38px;
     z-index: 1;
 }
@@ -333,6 +351,7 @@ footer{
         font-size: 40px;
         line-height: 50px;
         padding-top: 0;
+        margin-bottom: 0;
     }
 
     .calc-block{
@@ -354,13 +373,29 @@ footer{
         width: 450px;
     }
 
+    .content-block{
+        margin: 60px 50px;
+    }
+
+    .content-text{
+        margin-bottom: 10px;
+    }
+
+    .content-title{
+        margin-bottom: 35px;
+    }
+
+    .credit-program-block{
+        margin-bottom: 35px;
+    }
+
     .button-to-send{
         font-size: 16px;
         padding: 21px 105px;
     }
 
     .pseudo-block{
-        margin: -10px auto;
+        margin: -30px auto;
     }
     
     .pseudo-block_first{
@@ -370,12 +405,11 @@ footer{
     
     .pseudo-block_second{
         width: 380px;
-        height: 65px;
-        margin-top: -50px;
+        height: 100px;
+        margin-top: -85px;
     }
 
     footer{
         height: 40px;
     }
 }
-
